# suffixPrefixLCS

./: CMakeLists.txt  README.md  example_generator_using.sh  generate_tests.cpp  main.cpp  suffix_prefix_lcs.cpp  suffix_prefix_lcs.h  suffix_prefix_lcs_long.cpp  suffix_prefix_lcs_long.h
